...
            "value" : "Back"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "返回"
          }
        }
      }
    },
    "a11y_insert_image" : {
      "extractionState" : "stale",
...
            "value" : "Share"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "分享"
          }
        }
      }
    },
    "cancel" : {
      "extractionState" : "stale",
...
            "value" : "Diary"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "日记"
          }
        }
      }
    },
    "index_today" : {
      "extractionState" : "stale",
...
            "value" : "Write"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "写日记"
          }
        }
      }
    },
    "index_yesterday" : {
      "extractionState" : "stale",
...
            "value" : "Save"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "保存"
          }
        }
      }
    },
    "search_all_loc" : {
      "extractionState" : "stale",
...
            "value" : "Search"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "搜索"
          }
        }
      }
    },
    "settings_auto_loc" : {
      "extractionState" : "stale",
...
            "value" : "Hide"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "隐藏"
          }
        }
      }
    },
    "settings_share_loc_sub" : {
      "extractionState" : "stale",
...
            "value" : "Settings"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "设置"
          }
        }
      }
    },
    "settings_version" : {
      "extractionState" : "stale",
...
            "value" : "Sunday"
          }
        },
        "zh-Hans" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "周日"
          }
        }
      }
    },
    "share_preview_title" : {
      "extractionState" : "manual",
...
